[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://Scripts/ui/MainMenu.gd" id="1_e1qdx"]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_e1qdx")

[node name="VBox" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -200.0
offset_right = 160.0
offset_bottom = 200.0

[node name="Title" type="Label" parent="VBox"]
text = "Robo-Rumble Arena"
align = 1

[node name="Loadout" type="Button" parent="VBox"]
text = "Loadout"

[node name="Host" type="Button" parent="VBox"]
text = "Host Match"

[node name="Join" type="Button" parent="VBox"]
text = "Join Match"

[node name="Training" type="Button" parent="VBox"]
text = "Training"

[node name="IP" type="LineEdit" parent="VBox"]
placeholder_text = "Server IP (for Join)"
text = "127.0.0.1"

[node name="_ScriptBinder" type="Node" parent="."]

[connection signal="pressed" from="VBox/Loadout" to="." method="_on_loadout_pressed"]
[connection signal="pressed" from="VBox/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="VBox/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="VBox/Training" to="." method="_on_training_pressed"]